load("@bazel_skylib//rules:common_settings.bzl",
     "bool_flag", "string_flag")
# load("@bazel_skylib//rules:copy_file.bzl", "copy_file")

load("@lemon//src:BUILD.bzl", "lemon")
load("@makeheaders//src:BUILD.bzl", "makeheaders")

load("//:BUILD.bzl",
     "BASE_COPTS",
     "BASE_DEFINES",
     "LIBFINDLIB_VERSION",
     "LIBLOG_CC_VERSION",
     "UTHASH_VERSION")

COPTS = BASE_COPTS
DEFINES = BASE_DEFINES # + ["TRACING"]

csrcs = glob(["*.c"])
exports_files(
    glob(
        ["*.c"],
        # meta_syntaxis.c already exported by lemon
        exclude = ["meta_syntaxis.c"]
    )
)

################################################################
cc_library(
    name = "meta_parser",
    # alwayslink = True,
    srcs = [
        "meta_parser.c",
        ":xmkhdrs",
        # "meta_parser.h",
    ],
    deps = [
        "@liblog_cc//src:logc",
        "@uthash//src:uthash",
        "//src/lexer:meta_lexer",
        ":meta_syntaxis"
    ],
    copts = COPTS + [
        "-Wno-unused-parameter",
        "-Wno-unused-variable",
        "-Wno-visibility",

        ## NOTE: generated meta_syntaxis.c includes header with full
        ## bazel path, e.g.
        ## #include "bazel-out/darwin-fastbuild/bin/external/mibl/src/findlib/meta_syntaxis.h"
        ## so we always need '-I .'
        "-I.",
        "-Isrc",

        "-I$(GENDIR)/src/parser",
        "-Iexternal/libfindlib_cc~{}/src".format(
            LIBFINDLIB_VERSION),

        "-Iexternal/liblog_cc~{}/src".format(LIBLOG_CC_VERSION),

        "-Iexternal/uthash~{}/src".format(UTHASH_VERSION),
        # "-Ivendored/uthash",
        # "-Iexternal/mibl/vendored/uthash",
    ],
    defines = DEFINES + select({
        ":yydebug?": ["YYDEBUG", "TRACING"],
        "//conditions:default":   []
    }) + select({
        ":yytrace?": ["YYTRACE"],
        "//conditions:default":   []
    }),
    visibility = [
        "//src:__pkg__",
        "//test:__subpackages__"
    ]
)

###########
cc_library(
    name = "meta_syntaxis",
    # alwayslink = True,
    srcs = [
        "meta_syntaxis.c",

        "meta_entries.c",
        "meta_flags.c",
        "meta_packages.c",
        "meta_properties.c",
        "meta_settings.c",
        "meta_values.c",
        "utils.c",

        ":xmkhdrs",

        # "meta_syntaxis.h",
        # "meta_entries.h",
        # "meta_flags.h",
        # "meta_packages.h",
        # "meta_properties.h",
        # "meta_settings.h",
        # "meta_values.h",
        # "utils.h"
    ] + select({
        "//config/profile:dev?": [
            "debug_meta.c", # "debug_meta.h"
        ],
        "//conditions:default": []
    }),
    deps = [
        "@liblog_cc//src:logc",
        "@uthash//src:uthash",
    ],
    copts = COPTS + [
        "-Wno-unused-parameter",
        "-Wno-unused-variable",
        "-Wno-visibility",

        ## NOTE: generated meta_syntaxis.c includes header with full
        ## bazel path, e.g.
        ## #include "bazel-out/darwin-fastbuild/bin/external/mibl/src/findlib/meta_syntaxis.h"
        ## so we always need '-I .'
        "-I.",
        "-Isrc",

        "-I$(GENDIR)/src/parser",
        "-Iexternal/libfindlib_cc~{}/src".format(
            LIBFINDLIB_VERSION),

        "-Iexternal/liblog_cc~{}/src".format(LIBLOG_CC_VERSION),

        "-Iexternal/uthash~{}/src".format(UTHASH_VERSION),
        # "-Ivendored/uthash",
        # "-Iexternal/mibl/vendored/uthash",
    ],
    defines = DEFINES + select({
        ":yydebug?": ["YYDEBUG", "TRACING"],
        "//conditions:default":   []
    }) + select({
        ":yytrace?": ["YYTRACE"],
        "//conditions:default":   []
    }),
    visibility = ["//test:__subpackages__"]
)

########
lemon(
    name = "gen_meta_syntaxis",
    yy   = "meta_syntaxis.y",
    outs = ["meta_syntaxis.c","meta_syntaxis.out"],
    defines = select({
        ":yydebug?": ["YYDEBUG", "TRACING"],
        "//conditions:default":   []
    }) + select({
        ":yytrace?": ["YYTRACE"],
        "//conditions:default":   []
    }),
    visibility = [
        "//src:__subpackages__",
        "//test:__pkg__"
    ]
)

################################################################
makeheaders(
    name = "xmkhdrs",
    out = "parser.h",
    export_interface = False,
    srcs = [
        # "//src/lexer:meta_lexis.c",
        "meta_parser.c",
        "meta_syntaxis.c",
        "meta_entries.c",
        "meta_flags.c",
        "meta_packages.c",
        "meta_properties.c",
        "meta_settings.c",
        "meta_values.c",
        "utils.c",
        # "debug_meta.c"
    ] + select({
        "//config/profile:dev?": ["debug_meta.c"],
        "//conditions:default": []
    }),
    additional_srcs = [
        # no header outputs for these
        "//src/lexer:meta_lexis.c",
    ],
    # outs = [
    #     "meta_parser.h",
    #     "meta_syntaxis.h",
    #     "meta_entries.h",
    #     "meta_flags.h",
    #     "meta_packages.h",
    #     "meta_properties.h",
    #     "meta_settings.h",
    #     "meta_values.h",
    #     "utils.h",
    #     # "debug_meta.h"
    # # ],
    # ] + select({
    #     "//config/profile:dev?": ["debug_meta.h"],
    #     "//conditions:default": []
    # }),
)

# genrule(
#     name = "mkhdrs",
#     srcs = [
#         # "//src/lexer:meta_lexis.c:",
#         "meta_parser.c",
#         "meta_syntaxis.c",
#         "meta_entries.c",
#         "meta_flags.c",
#         "meta_packages.c",
#         "meta_properties.c",
#         "meta_settings.c",
#         "meta_values.c",
#         "utils.c",
#         # "debug_meta.c"
#     ],
#     # ] + select({
#     #     "//config/profile:dev?": ["debug_meta.c"],
#     #     "//conditions:default": []
#     # }),
#     # ] + select({
#     #     "@platforms//os:linux": ["//src/linux:strlcpy.c", "//src/linux:strlcat.c"],
#     #     "//conditions:default":   []
#     outs = [
#         "meta_parser.h",
#         "meta_syntaxis.h",
#         "meta_entries.h",
#         "meta_flags.h",
#         "meta_packages.h",
#         "meta_properties.h",
#         "meta_settings.h",
#         "meta_values.h",
#         "utils.h",
#         # "debug_meta.h"
#     ],
#     # ] + select({
#     #     "//config/profile:dev?": ["debug_meta.h"],
#     #     "//conditions:default": []
#     # }),
#     cmd = " ".join([
#         "echo CWD: `pwd`;",
#         "SRC1=$(location meta_values.c);",
#         "SRCDIR1=`dirname $$SRC1`;",
#         "$(execpath @makeheaders//src:makeheaders)",
#         # "$(location //src/lexer:meta_lexis.c)",
#         "$(location meta_syntaxis.c)",
#         "$(location meta_parser.c)",

#         "$(location meta_entries.c)",
#         "$(location meta_flags.c)",
#         "$(location meta_packages.c)",
#         "$(location meta_properties.c)",
#         "$(location meta_settings.c)",
#         "$(location meta_values.c)",
#         "$(location utils.c)",
#         # "$(location debug_meta.c)",
#         ";",
#         "cp $${SRCDIR1}/*.h $(@D)",
#     ]),
#     tools = ["@makeheaders//src:makeheaders"],
#     visibility = ["//visibility:public"]
# )

# genrule(
#     name = "mkhdrs_debug",
#     srcs = [
#         "meta_parser.c",
#         "meta_entries.c",
#         "meta_flags.c",
#         "meta_packages.c",
#         "meta_properties.c",
#         "meta_settings.c",
#         "meta_values.c",
#         # "meta_lexis.c",
#         "meta_syntaxis.c",
#         "debug_meta.c",
#         "ansi_colors.h",
#         "utils.c",
#         # "config_opam.c",

#         # "@liblog_cc//src:logc:log.h",
#         # "//vendored/uthash:utarray.c",
#         # "//vendored/uthash:utarray.h",
#     ] + select({
#         "@platforms//os:linux": ["//src/linux:strlcpy.c", "//src/linux:strlcat.c"],
#         "//conditions:default":   []
#     }),
#     outs = [
#         "debug_meta.h",
#     ],
#     cmd = " ".join([
#         "SRC1=$(location debug_meta.c);",
#         "SRCDIR1=`dirname $$SRC1`;",
#         "$(execpath @makeheaders//src:makeheaders)",
#         # "$(SRCS);",

#         "$(location meta_parser.c)",
#         "$(location meta_entries.c)",
#         "$(location meta_flags.c)",
#         "$(location meta_packages.c)",
#         "$(location meta_properties.c)",
#         "$(location meta_settings.c)",
#         "$(location meta_values.c)",
#         # "$(location meta_lexis.c)",
#         "$(location meta_syntaxis.c)",
#         "$(location debug_meta.c)",
#         "$(location utils.c)",
#         # "$(location config_opam.c)",
#         "$(location ansi_colors.h);",

#         # "$(location //src:log.c):", # do not emit header
#         # "$(location @liblog_cc//src:logc:log.h)",
#         # "$(location //vendored/uthash:utarray.c):",
#         # "$(location //vendored/uthash:utarray.h)",

#         "cp $${SRCDIR1}/*.h $(@D)",
#     ]),
#     tools = ["@makeheaders//src:makeheaders"],
#     visibility = ["//visibility:public"]
# )

################################################################
## enable meta ast debugging: --//bootstrap:ast-dump
bool_flag(name = "ast-dump", build_setting_default = 0)
config_setting(name = "ast-dump-enabled",
               flag_values = {":ast-dump": "True"})
config_setting(name = "ast-dump-disabled",
               flag_values = {":ast-dump": "False"})

## enable meta ast debugging: --//bootstrap:ast-trace
bool_flag(name = "ast-trace", build_setting_default = 0)
config_setting(name = "ast-trace-enabled",
               flag_values = {":ast-trace": "True"})
config_setting(name = "ast-trace-disabled",
               flag_values = {":ast-trace": "False"})

## enable parser debugging: --//bootstrap:yydebug
bool_flag(name = "yydebug", build_setting_default = 0)
config_setting(name = "yydebug?", flag_values = {":yydebug": "True"})
# config_setting(name = "yydebug-disabled", flag_values = {":yydebug": "False"})
bool_flag(name = "yydebug-exit-on-error", build_setting_default = 0)
config_setting(name = "yydebug-exit-on-error-enabled",
               flag_values = {":yydebug-exit-on-error": "True"})

bool_flag(name = "yytrace", build_setting_default = 0)
config_setting(name = "yytrace?", flag_values = {":yytrace": "True"})
# config_setting(name = "yytrace-disabled", flag_values = {":yytrace": "False"})

## debug parse rules
string_flag(name = "yydebug-rules", build_setting_default = "")
config_setting(name = "yydebug-fpf",
               flag_values = {":yydebug-rules": "fpf"})
config_setting(name = "yydebug-fvf",
               flag_values = {":yydebug-rules": "fvf"})
config_setting(name = "yydebug-filter",
               flag_values = {":yydebug-rules": "filter"})
config_setting(name = "yydebug-build-filter",
               flag_values = {":yydebug-rules": "build-filter"})

## enable lexer debugging: --//bootstrap:lexdebug
bool_flag(name = "lexdebug", build_setting_default = 0)
config_setting(name = "lexdebug-enabled", flag_values = {":lexdebug": "True"})
config_setting(name = "lexdebug-disabled", flag_values = {":lexdebug": "False"})

string_flag(name = "lexdebug-rules", build_setting_default = "")
config_setting(name = "lexdebug-version",
               flag_values = {":lexdebug-rules": "version"})
config_setting(name = "lexdebug-fpf",
               flag_values = {":lexdebug-rules": "fpf"})
config_setting(name = "lexdebug-fvf",
               flag_values = {":lexdebug-rules": "fvf"})
config_setting(name = "lexdebug-filter",
               flag_values = {":lexdebug-rules": "filter"})
config_setting(name = "lexdebug-build-filter",
               flag_values = {":lexdebug-rules": "build-filter"})
