load("@makeheaders//src:RULES.bzl", "makeheaders")

load("//config/cc:CONFIG.bzl",
     "BASE_DEPS",
     "BASE_COPTS",
     INCLUDE_PATHS = "BASE_INCLUDE_PATHS",
     DEFINES = "BASE_DEFINES")

COPTS = BASE_COPTS + INCLUDE_PATHS
TOOLCHAINS = ["//:test_repo_paths"]

##########
cc_binary(
    name  = "meta_parse",
    linkstatic = 1,
    srcs  = [
        "meta_parse.c",
        ":mkhdrs"
    ],
    deps = BASE_DEPS + [
        # "@liblogc//src:logc",
        "@uthash//src:uthash",
        "//src:findlibc"
    ],
    copts = COPTS + [
        "-I$(@uthash)/src",
        "-I$(GENDIR)/$(@)/src",
        "-I$(GENDIR)/$(@)/test/app",
        "-I$(@liblogc)/src",
        "-I$(@uthash)/src"
    ],
    local_defines = DEFINES,
    toolchains = TOOLCHAINS,
)

############
makeheaders(
    name = "mkhdrs",
    hdrs_srcs = [
        "meta_parse.c",
    ],
    # additional_srcs = [
    #     "//src/lexer:meta_lexis.c",
    #     "//src/parser:meta_syntaxis.c",
    # ],
)
