load("@makeheaders//rules:makeheaders.bzl", "makeheaders")

load("//config/cc:CONFIG.bzl",
     "BASE_COPTS",
     "BASE_DEFINES")

COPTS = BASE_COPTS
TOOLCHAINS = ["//:test_module_profiles"]

##########
cc_binary(
    name  = "meta_parse",
    linkstatic = 1,
    srcs  = [
        "meta_parse.c",
        ":mkhdrs"
    ],
    deps = [
        "@liblogc//lib:logc",
        "@uthash//lib:uthash",
        "//lib:findlibc"
    ],
    copts = COPTS + [
        "-I$(GENDIR)/$(@)/src",
        "-I$(GENDIR)/$(@)/test/app",
        # "-I$(@liblogc)/lib",
        # "-I$(@uthash)/lib"
    ],
    local_defines = BASE_DEFINES,
    toolchains = TOOLCHAINS,
)

############
makeheaders(
    name = "mkhdrs",
    hdrs_srcs = [
        "meta_parse.c",
    ],
    # additional_srcs = [
    #     "//lib/lexer:meta_lexis.c",
    #     "//lib/parser:meta_syntaxis.c",
    # ],
)
