load("@rules_cc//cc:defs.bzl", "cc_binary")

load("@makeheaders//rules:makeheaders.bzl", "makeheaders")

load("//config/cc:CONFIG.bzl", "BASE_COPTS", "PROFILE")

##########
cc_binary(
    name  = "meta_parse",
    linkstatic = 1,
    srcs  = [
        "meta_parse.c",
        ":mkhdrs"
    ],
    deps = [
        "@liblogc//lib:logc",
        "@uthash//lib:uthash",
        "//lib:findlibc"
    ],
    copts = BASE_COPTS + ["-I$(GENDIR)/test/app"],
    defines = PROFILE,
)

############
makeheaders(
    name = "mkhdrs",
    hdrs_srcs = ["meta_parse.c"],
)
